using websocket connection to bypass tcp payload

--- a/src/mod/applications/mod_event_websocket/Makefile.am
+++ b/src/mod/applications/mod_event_websocket/Makefile.am
@@ -5,4 +5,4 @@ mod_LTLIBRARIES = mod_event_websocket.la
 mod_event_websocket_la_SOURCES  = mod_event_websocket.c
 mod_event_websocket_la_CFLAGS   = $(AM_CFLAGS)
 mod_event_websocket_la_LIBADD   = $(switch_builddir)/libfreeswitch.la
-mod_event_websocket_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
+mod_event_websocket_la_LDFLAGS  = -avoid-version -module -no-undefined -shared `pkg-config --libs libwebsockets` 
